welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:29: error: not found: value couleurs
  setCouleurBrosse(couleurs(couleurs.length))
                   ^Array1:29: error: not found: value couleurs
  setCouleurBrosse(couleurs(couleurs.length))
                            ^